--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ header.abajo{
 			de desarrollo hace 4 años, siempre manteniendo al día mis conocimientos con respecto a los cambios que se
 			producen día a día.</p>
 			<br>
-			<a href="Curriculum Gabriel Sebastian Tercero.pdf" download="Curriculum" alt="curriculum"><button class="botoncv"><i class="fa fa-file-text"></i> MI CURRICULUM</button></a>
+			<a href="Curriculum Gabriel Sebastian Tercero.pdf" download="Curriculum Gabriel Sebastian Tercero" alt="curriculum"><button class="botoncv"><i class="fa fa-file-text"></i> MI CURRICULUM</button></a>
 			<br id="habili">
 			<br>
 			
