--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ header.abajo{
 <div class="bg bg3"></div>
     <header class="header">
       <nav class="nav">
-        <a href="https://gabrieltercero.netlify.app/"><img src="https://seeklogo.com/images/G/GT-logo-FF2C831A14-seeklogo.com.png" width="90px" height="40px"></a>
+        <a href="https://gabrieltercero.com.ar"><img src="https://seeklogo.com/images/G/GT-logo-FF2C831A14-seeklogo.com.png" width="90px" height="40px"></a>
         <button class="nav-toggle" aria-label="Abrir menú">
           <i class="fas fa-bars"></i>
         </button>
