--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 							<!-- Tab Menu -->
 							<ul class="nav nav-tabs" role="tablist">
 								<li role="presentation" class="active"><span class="tooltips">Sobre mi</span><a href="#welcome" role="tab" data-toggle="tab"><i class="fa fa-user"></i></a></li>
-								<li role="presentation"><span class="tooltips">Mi Habilidad</span><a href="#skill" role="tab"  data-toggle="tab"><i class="fa fa-rocket"></i></a></li>
+								<li role="presentation"><span class="tooltips">Habilidad</span><a href="#skill" role="tab"  data-toggle="tab"><i class="fa fa-rocket"></i></a></li>
 								<li role="presentation"><span class="tooltips">Por que yo?</span><a href="#why" role="tab"  data-toggle="tab"><i class="fa fa-question"></i></a></li>
 								<li role="presentation"><span class="tooltips">Mi Vision</span><a href="#vision" role="tab"  data-toggle="tab"><i class="fa fa-graduation-cap"></i></a></li>
 							</ul>
