--- a/index.html
+++ b/index.html
@@ -342,8 +342,13 @@
 									<div class="about-text">
 										<h2 class="tab-title">Mi Vision</h2>
 										<div class="content">
-											<p>my visition is ontrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-											<p>also i've perfect ontrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+											<p>Un diseñador gráfica ha de contar con la creatividad y educación visual necesaria para lograr transmitir ideas, conceptos o sensaciones determinadas en función de lo que el proyecto requiera.
+
+												De esta manera, la visión de un diseñador gráfico se antoja indispensable para la creación de identidades visuales, creaciones de marca y estilos estéticos de empresas y distintos negocios.
+												
+												Gracias a la labor del diseñador gráfico, se puede definir la percepción que posee el gran público sobre una marca o empresa. Prácticamente cualquier proyecto necesita distinguirse de su principal competencia, por lo que requiere una identidad visual que lo diferencie y aporte una imagen clara y concisa de su actividad y principales ventajas con respecto a sus competidores.</p>
+											<p>De esta manera, la visión de un diseñador gráfico ayuda en gran manera a lograr los objetivos marcados en cualquier proyecto. Ayuda a lograr mayor identificación de marca por parte de clientes asiduos y potenciales, y ayuda a segmentar al público objetivo.</p>
+										<p>La visión de un artista busca evocar una sensación o emoción a través de una creación propia, cargada de su esencia y personalidad, fruto de la expresión artística que supone, por ejemplo, la pintura, la visión de un diseñador gráfico busca solucionar de manera funcional y estética la manera de comunicar un mensaje o concepto. En resumidas cuentas, un artista da a luz a una obra de arte, por norma general sin encontrarse sujeta a normas o condiciones, mientras que el diseñador gráfico compone una solución visual a un mensaje que ha de ser transmitido en función de distintos parámetros, tales como el soporte, un contenido definido o una estrategia de marketing, entre otros.</p>
 										</div>
 									</div>
 								</div>
@@ -636,7 +641,6 @@
 					<div class="col-md-12 col-sm-12 col-xs-12">
 						<div class="section-title">
 							<h1><span>Servicio y</span> Precio<i class="fa fa-history"></i></h1>
-							<p>ontrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old<p>
 						</div>
 					</div>
 				</div>
