--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 		
 		<!-- Title Tag -->
         <title>Gabriel Tercero &minus; Desarrollador Web</title>
-		
+		<meta name="description" content="Gabriel Tercero | Desarrollador web freelance | Diseñador web freelance experto en sitios web, experiencia de usuario y posicionamiento en Google. Más de 5 años trabajando.">
+		<meta name="robots" content="all">
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" href="https://seeklogo.com/images/G/GT-logo-FF2C831A14-seeklogo.com.png">	
-		
+		<link rel="canonical" href="https://www.gabrieltercero.com.ar/">
+		<meta name="keywords" content="Gabriel Tercero, diseñador web, jujuy argentina, freelance, pagina web"/>
+		<meta name="author" content="Gabriel Tercero" />
+
+		<meta name="copyright" content="Gabriel Tercero" />
         <!-- Google Font -->
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet"> 
 		
@@ -84,7 +89,7 @@
 					<div class="col-md-2 col-sm-12 col-xs-12">
 						<!-- Logo -->
 						<div class="logo">
-							<a href="index.html"><img src="https://seeklogo.com/images/G/GT-logo-FF2C831A14-seeklogo.com.png" width="45px" height="28px" alt=""></a>
+							<a href="index.html"><img src="https://seeklogo.com/images/G/GT-logo-FF2C831A14-seeklogo.com.png" width="45px" height="28px" alt="logo gabriel tercero" title="logo gabriel tercero"></a>
 						</div>
 						<!--/ End Logo -->
 						<div class="mobile-nav"></div>
@@ -186,7 +191,7 @@
 											<div class="col-md-4 col-sm-4 col-xs-12">
 												<!-- About Image -->
 												<div class="single-image">
-													<img src="images/foto.jpg" alt="">
+													<img src="images/foto.jpg" alt="perfil gabriel tercero" title="perfil gabriel tercero">
 												</div>
 											</div>
 											<!-- End About Image -->
@@ -449,7 +454,7 @@
 							<div class="mix design html5 col-md-4 col-sm-6 col-xs-12 col-fix ">
 								<div class="portfolio-single">
 									<div class="portfolio-head">
-										<img src="images/page1.png" alt=""/>
+										<img src="images/page1.png" alt="primera pagina web jujuy"/>
 									</div>
 									<div class="portfolio-hover">
 										<h4><span>Web Comercial</span><a href="#">Alberdi</a></h4>
@@ -466,7 +471,7 @@
 							<div class="mix design html5 col-md-4 col-sm-6 col-xs-12 col-fix">
 								<div class="portfolio-single">
 									<div class="portfolio-head">
-										<img src="images/page2.png" alt=""/>
+										<img src="images/page2.png" alt="segunda pagina web jujuy"/>
 									</div>
 									<div class="portfolio-hover">
 										<h4><span>Web Comercial</span><a href="#">Centauro corte y plegado Salta</a></h4>
@@ -484,7 +489,7 @@
 							<div class="mix design html5 col-md-4 col-sm-6 col-xs-12 col-fix">
 								<div class="portfolio-single">
 									<div class="portfolio-head">
-										<img src="images/page3.png" alt=""/>
+										<img src="images/page3.png" alt="tercero pagina web jujuy"/>
 									</div>
 									<div class="portfolio-hover">
 										<h4><span>Web Comercial</span><a href="#">LDConstrucciones</a></h4>
@@ -501,7 +506,7 @@
 							<div class="mix design col-md-4 col-sm-6 col-xs-12 col-fix">
 								<div class="portfolio-single">
 									<div class="portfolio-head">
-										<img src="images/page4.png" alt=""/>
+										<img src="images/page4.png" alt="cuarta pagina web jujuy"/>
 									</div>
 									<div class="portfolio-hover">
 										<h4><span>Web Comercial</span><a href="#">Reparación y Mantenimiento PC</a></h4>
@@ -518,7 +523,7 @@
 							<div class="mix design html5 col-md-4 col-sm-6 col-xs-12 col-fix">
 								<div class="portfolio-single">
 									<div class="portfolio-head">
-										<img src="images/page5.png" alt=""/>
+										<img src="images/page5.png" alt="quinta pagina web jujuy"/>
 									</div>
 									<div class="portfolio-hover">
 										<h4><span>Web Comercial</span><a href="#">Grupo Verde</a></h4>
@@ -535,7 +540,7 @@
 							<div class="mix development html5 col-md-4 col-sm-6 col-xs-12 col-fix">
 								<div class="portfolio-single">
 									<div class="portfolio-head">
-										<img src="images/page6.png" alt=""/>
+										<img src="images/page6.png" alt="sexta pagina web jujuy"/>
 									</div>
 									<div class="portfolio-hover">
 										<h4><span>Portfolio</span><a href="#">Gabriel Tercero - Diseñador Web</a></h4>
@@ -753,7 +758,7 @@
 									<p>Excelente diseñador web. Muy detallista, prolijo y sin demoras. Realmente lo recomiendo.</p>
 								</div>
 								<div class="testimonial-info">
-									<img src="images/test2.png" class="img-circle" alt="">
+									<img src="images/test2.png" class="img-circle" alt="testimonio cliente gabriel tercero">
 									<ul class="rating">
 										<li><i class="fa fa-star"></i></li>
 										<li><i class="fa fa-star"></i></li>
@@ -772,7 +777,7 @@
 									<p>Excelente lugar y atención muy recomendable y encima muy buenos precios.</p>
 								</div>
 								<div class="testimonial-info">
-									<img src="images/test1.jpg" class="img-circle" alt="">
+									<img src="images/test1.jpg" class="img-circle" alt="testimonio web jujuy">
 									<ul class="rating">
 										<li><i class="fa fa-star"></i></li>
 										<li><i class="fa fa-star"></i></li>
