--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
         <!-- Meta tag -->
 		<meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-		<meta name="description" content="">
+		<meta name="description" content="Gabriel Tercero | Desarrollador web freelance | Diseñador web freelance experto en sitios web, experiencia de usuario y posicionamiento en Google. Más de 5 años trabajando.">
 		<meta name='copyright' content='codeglim'>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">	
 		
 		<!-- Title Tag -->
         <title>Gabriel Tercero &minus; Desarrollador Web</title>
-		<meta name="description" content="Gabriel Tercero | Desarrollador web freelance | Diseñador web freelance experto en sitios web, experiencia de usuario y posicionamiento en Google. Más de 5 años trabajando.">
 		<meta name="robots" content="all">
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" href="https://seeklogo.com/images/G/GT-logo-FF2C831A14-seeklogo.com.png">	
@@ -89,7 +88,7 @@
 					<div class="col-md-2 col-sm-12 col-xs-12">
 						<!-- Logo -->
 						<div class="logo">
-							<a href="index.html"><img src="https://seeklogo.com/images/G/GT-logo-FF2C831A14-seeklogo.com.png" width="45px" height="28px" alt="logo gabriel tercero" title="logo gabriel tercero"></a>
+							<a href="index.html"><img src="https://seeklogo.com/images/G/GT-logo-FF2C831A14-seeklogo.com.png" width="45px" height="28px" alt="logo gabriel tercero"></a>
 						</div>
 						<!--/ End Logo -->
 						<div class="mobile-nav"></div>
@@ -458,7 +457,11 @@
 									</div>
 									<div class="portfolio-hover">
 										<h4><span>Web Comercial</span><a href="#">Alberdi</a></h4>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam interdum tincidunt vulputate. </p>
+										<p>Su capital accionario es 100% nacional.
+
+											La producción se realiza con la mas alta tecnología y elevados estándares de calidad, atendiendo a las nuevas tendencias del mercado.
+											
+											Con sus diferentes marcas, Alberdi, Allpa y Paz, ha construido un amplio portfolio de productos que abarca todos los segmentos del mercado, desde los mas básicos hasta los mas sofisticados.</p>
 										<div class="button">
 											<a data-fancybox="gallery" href="images/page1.png"><i class="fa fa-search"></i></a>
 											<a href="https://www.alberdi.com.ar/" class="primary"><i class="fa fa-external-link"></i></a>
@@ -475,7 +478,7 @@
 									</div>
 									<div class="portfolio-hover">
 										<h4><span>Web Comercial</span><a href="#">Centauro corte y plegado Salta</a></h4>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam interdum tincidunt vulputate. </p>
+										<p>Entrega en término. Valoramos el compromiso asumido con nuestros clientes. 12 años de trayectoria. Dando respuesta en tiempo y forma, a las necesidades de nuestros clientes. Espesor de chapa hasta 1/4. Trabajamos con espesores de chapa de hasta 1/4 de pulgada.</p>
 										<div class="button">
 											<a data-fancybox="gallery" href="images/page2-1.png"><i class="fa fa-search"></i></a>
 											<a href="https://www.centaurocorteyplegadosalta.com.ar/" class="primary"><i class="fa fa-external-link"></i></a>
@@ -493,7 +496,7 @@
 									</div>
 									<div class="portfolio-hover">
 										<h4><span>Web Comercial</span><a href="#">LDConstrucciones</a></h4>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam interdum tincidunt vulputate. </p>
+										<p>Este proyecto se trata de edificar viviendas con materiales reciclables y capacitar personas con el objetivo de enseñarles un oficio y que el sueño de una vivienda propia no sea tan imposible por el costo que se requiere. </p>
 										<div class="button">
 											<a data-fancybox="gallery" href="images/page3.png"><i class="fa fa-search"></i></a>
 											<a href="https://ldconstrucciones.000webhostapp.com/" class="primary"><i class="fa fa-external-link"></i></a>
@@ -510,7 +513,7 @@
 									</div>
 									<div class="portfolio-hover">
 										<h4><span>Web Comercial</span><a href="#">Reparación y Mantenimiento PC</a></h4>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam interdum tincidunt vulputate. </p>
+										<p>¿Tienes un problema con tu PC? llamanos y te resolveremos el problema. No pierdas tiempo.</p>
 										<div class="button">
 											<a data-fancybox="gallery" href="images/page4.png"><i class="fa fa-search"></i></a>
 											<a href="https://reparayprotejetupc.netlify.app/" class="primary"><i class="fa fa-external-link"></i></a>
@@ -527,7 +530,10 @@
 									</div>
 									<div class="portfolio-hover">
 										<h4><span>Web Comercial</span><a href="#">Grupo Verde</a></h4>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam interdum tincidunt vulputate. </p>
+										<p>¿Por qué elegirnos para sus necesidades de conductos de aire?. Confianza:
+											Legado de 10 años de construcción de confianza y relaciones en Los Ángeles condado. El mejor: Solo utilizamos los mejores técnicos profesionales.
+										A tiempo: Puedes contar con nosotros: estamos a tiempo, cada vez. Negocio:
+											Somos una empresa operada y de propiedad local</p>
 										<div class="button">
 											<a data-fancybox="gallery" href="images/page5.png"><i class="fa fa-search"></i></a>
 											<a href="https://grupoverde.netlify.app/" class="primary"><i class="fa fa-external-link"></i></a>
@@ -544,7 +550,7 @@
 									</div>
 									<div class="portfolio-hover">
 										<h4><span>Portfolio</span><a href="#">Gabriel Tercero - Diseñador Web</a></h4>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam interdum tincidunt vulputate. </p>
+										<p>Gabriel Tercero | Desarrollador web freelance | Diseñador web freelance experto en sitios web, experiencia de usuario y posicionamiento en Google. Más de 5 años trabajando. </p>
 										<div class="button">
 											<a data-fancybox="gallery" href="images/page6.png"><i class="fa fa-search"></i></a>
 											<a href="https://www.gabrieltercero.com.ar/" class="primary"><i class="fa fa-external-link"></i></a>
