--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 
 											La producción se realiza con la mas alta tecnología y elevados estándares de calidad, atendiendo a las nuevas tendencias del mercado.
 											
-											Con sus diferentes marcas, Alberdi, Allpa y Paz, ha construido un amplio portfolio de productos que abarca todos los segmentos del mercado, desde los mas básicos hasta los mas sofisticados.</p>
+											Con sus diferentes marcas, Alberdi, Allpa y Paz.</p>
 										<div class="button">
 											<a data-fancybox="gallery" href="images/page1.png"><i class="fa fa-search"></i></a>
 											<a href="https://www.alberdi.com.ar/" class="primary"><i class="fa fa-external-link"></i></a>
@@ -478,7 +478,7 @@
 									</div>
 									<div class="portfolio-hover">
 										<h4><span>Web Comercial</span><a href="#">Centauro corte y plegado Salta</a></h4>
-										<p>Entrega en término. Valoramos el compromiso asumido con nuestros clientes. 12 años de trayectoria. Dando respuesta en tiempo y forma, a las necesidades de nuestros clientes. Espesor de chapa hasta 1/4. Trabajamos con espesores de chapa de hasta 1/4 de pulgada.</p>
+										<p>Entrega en término. Valoramos el compromiso asumido con nuestros clientes. 12 años de trayectoria. Dando respuesta en tiempo y forma, a las necesidades de nuestros clientes. Espesor de chapa hasta 1/4.</p>
 										<div class="button">
 											<a data-fancybox="gallery" href="images/page2-1.png"><i class="fa fa-search"></i></a>
 											<a href="https://www.centaurocorteyplegadosalta.com.ar/" class="primary"><i class="fa fa-external-link"></i></a>
@@ -532,8 +532,7 @@
 										<h4><span>Web Comercial</span><a href="#">Grupo Verde</a></h4>
 										<p>¿Por qué elegirnos para sus necesidades de conductos de aire?. Confianza:
 											Legado de 10 años de construcción de confianza y relaciones en Los Ángeles condado. El mejor: Solo utilizamos los mejores técnicos profesionales.
-										A tiempo: Puedes contar con nosotros: estamos a tiempo, cada vez. Negocio:
-											Somos una empresa operada y de propiedad local</p>
+										A tiempo: Puedes contar con nosotros cada vez.</p>
 										<div class="button">
 											<a data-fancybox="gallery" href="images/page5.png"><i class="fa fa-search"></i></a>
 											<a href="https://grupoverde.netlify.app/" class="primary"><i class="fa fa-external-link"></i></a>
