--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 									</div>
 									<div class="portfolio-hover">
 										<h4><span>Web Comercial</span><a href="#">Centauro corte y plegado Salta</a></h4>
-										<p>Entrega en término. Valoramos el compromiso asumido con nuestros clientes. 12 años de trayectoria. Dando respuesta en tiempo y forma, a las necesidades de nuestros clientes. Espesor de chapa hasta 1/4.</p>
+										<p>Entrega en término. Valoramos el compromiso asumido con nuestros clientes. 12 años de trayectoria. Dando respuesta en tiempo y forma, a las necesidades de nuestros clientes.</p>
 										<div class="button">
 											<a data-fancybox="gallery" href="images/page2-1.png"><i class="fa fa-search"></i></a>
 											<a href="https://www.centaurocorteyplegadosalta.com.ar/" class="primary"><i class="fa fa-external-link"></i></a>
@@ -531,8 +531,7 @@
 									<div class="portfolio-hover">
 										<h4><span>Web Comercial</span><a href="#">Grupo Verde</a></h4>
 										<p>¿Por qué elegirnos para sus necesidades de conductos de aire?. Confianza:
-											Legado de 10 años de construcción de confianza y relaciones en Los Ángeles condado. El mejor: Solo utilizamos los mejores técnicos profesionales.
-										A tiempo: Puedes contar con nosotros cada vez.</p>
+											Legado de 10 años de construcción de confianza y relaciones en Los Ángeles condado. El mejor: Solo utilizamos los mejores técnicos profesionales.</p>
 										<div class="button">
 											<a data-fancybox="gallery" href="images/page5.png"><i class="fa fa-search"></i></a>
 											<a href="https://grupoverde.netlify.app/" class="primary"><i class="fa fa-external-link"></i></a>
