--- a/index.html
+++ b/index.html
@@ -661,13 +661,13 @@
 							<div class="table-head">
 								<h2 class="title">Basico</h2>
 								<div class="price">
-									<p class="amount">$<span>8.000</span> primer pago + $3.000/mes</p>
+									<p class="amount">$<span>8.000</span> primer pago + $2.000/mes</p>
 								</div>
 								<i class="fa fa-address-card"></i>
 							</div>
 							<!-- Table List -->
 							<ul class="table-list">
-								<li>1 Sitio Web</li>
+								<li>Cantidad de pagina 1</li>
 								<li>24/7 Soporte Tecnico</li>
 								<li>Mini cambios en Sitio Web</li>
 								<li>Cuenta de correo electrónico ilimitada</li>
@@ -675,7 +675,7 @@
 							</ul>
 							<!-- Table Bottom -->
 							<div class="table-bottom">
-								<a class="btn shine" href="#contact">Comprar<i class="fa fa-angle-right"></i></a>
+								<a class="btn shine" href="#contact">Seleccionar<i class="fa fa-angle-right"></i></a>
 							</div>
 						</div>
 					</div>
@@ -693,7 +693,7 @@
 							</div>
 							<!-- Table List -->
 							<ul class="table-list">
-								<li>1 Sitio Web + Subsitios</li>
+								<li>Cantidad de paginas 10</li>
 								<li>24/7 Soporte Tecnico</li>
 								<li>Mini cambios en Sitio Web</li>
 								<li>Cuenta de correo electrónico ilimitada</li>
@@ -701,7 +701,7 @@
 							</ul>
 							<!-- Table Bottom -->
 							<div class="table-bottom">
-								<a class="btn shine" href="#contact">Comprar<i class="fa fa-angle-right"></i></a>
+								<a class="btn shine" href="#contact">Seleccionar<i class="fa fa-angle-right"></i></a>
 							</div>
 						</div>
 					</div>
@@ -724,7 +724,7 @@
 							</div>
 							<!-- Table List -->
 							<ul class="table-list">
-								<li>1 Sitio Web + Subsitios</li>
+								<li>Cantidad de paginas 10</li>
 								<li>24/7 Soporte Tecnico</li>
 								<li>Mini cambios en Sitio Web</li>
 								<li>Cuenta de correo electrónico ilimitada</li>
@@ -732,7 +732,7 @@
 							</ul>
 							<!-- Table Bottom -->
 							<div class="table-bottom">
-								<a class="btn shine" href="#contact">Comprar<i class="fa fa-angle-right"></i></a>
+								<a class="btn shine" href="#contact">Seleccionar<i class="fa fa-angle-right"></i></a>
 							</div>
 						</div>
 					</div>
