--- a/index.html
+++ b/index.html
@@ -661,16 +661,17 @@
 							<div class="table-head">
 								<h2 class="title">Basico</h2>
 								<div class="price">
-									<p class="amount">$<span>8.000</span> primer pago + $2.000/mes</p>
+									<p class="amount">$<span>10.000</span> ANUAL</p>
 								</div>
 								<i class="fa fa-address-card"></i>
 							</div>
 							<!-- Table List -->
 							<ul class="table-list">
 								<li>Cantidad de pagina 1</li>
+								<li>Diseño Personalizado</li>
 								<li>24/7 Soporte Tecnico</li>
 								<li>Mini cambios en Sitio Web</li>
-								<li>Cuenta de correo electrónico ilimitada</li>
+								<li>Cuenta de correo electrónico limitada</li>
 								<li class="cross">Espacio del disco limitado</li>
 							</ul>
 							<!-- Table Bottom -->
@@ -687,13 +688,14 @@
 							<div class="table-head">
 								<h2 class="title">Estandar</h2>
 								<div class="price">
-									<p class="amount">$<span>10.000</span> primer pago + $3.000/mes</p>
+									<p class="amount">$<span>20.000</span> ANUAL</p>
 								</div>
 								<i class="fa fa-address-card"></i>
 							</div>
 							<!-- Table List -->
 							<ul class="table-list">
-								<li>Cantidad de paginas 10</li>
+								<li>Cantidad de paginas 5</li>
+								<li>Diseño Personalizado</li>
 								<li>24/7 Soporte Tecnico</li>
 								<li>Mini cambios en Sitio Web</li>
 								<li>Cuenta de correo electrónico ilimitada</li>
@@ -711,9 +713,9 @@
 						<div class="single-table">
 							<!-- Table Head -->
 							<div class="table-head">
-								<h2 class="title">Estandar <span style="background-color:#ce1717"> ¡¡OFERTA!! </span></h2>
+								<h2 class="title">ECOMMERCE</h2>
 								<div class="price">
-									<p class="amount">$<span>10.000</span> primer pago + </p><p class="textooferta" style="background-color:#ce1717">$27.000/anual (25% DESCUENTO)</p>
+									<p class="amount">$<span>35.000</span> ANUAL</p>
 								</div>
 								<style>
 									.textooferta { 
@@ -725,8 +727,9 @@
 							<!-- Table List -->
 							<ul class="table-list">
 								<li>Cantidad de paginas 10</li>
+								<li>Catálogo + Venta Online</li>
 								<li>24/7 Soporte Tecnico</li>
-								<li>Mini cambios en Sitio Web</li>
+								<li>Cambios dinamicos en Sitio Web</li>
 								<li>Cuenta de correo electrónico ilimitada</li>
 								<li class="cross">Espacio del disco ilimitado</li>
 							</ul>
