--- a/index.html
+++ b/index.html
@@ -661,14 +661,14 @@
 							<div class="table-head">
 								<h2 class="title">Basico</h2>
 								<div class="price">
-									<p class="amount">$<span>10.000</span> ANUAL</p>
+									<p class="amount">$<span>12.000</span> ANUAL</p>
 								</div>
 								<i class="fa fa-address-card"></i>
 							</div>
 							<!-- Table List -->
 							<ul class="table-list">
 								<li>Cantidad de pagina 1</li>
-								<li>Diseño Personalizado</li>
+								<li>Diseño Simple</li>
 								<li>24/7 Soporte Tecnico</li>
 								<li>Mini cambios en Sitio Web</li>
 								<li>Cuenta de correo electrónico limitada</li>
@@ -699,7 +699,7 @@
 								<li>24/7 Soporte Tecnico</li>
 								<li>Mini cambios en Sitio Web</li>
 								<li>Cuenta de correo electrónico ilimitada</li>
-								<li class="cross">Espacio del disco ilimitado</li>
+								<li class="cross">Espacio del disco 1GB</li>
 							</ul>
 							<!-- Table Bottom -->
 							<div class="table-bottom">
@@ -715,7 +715,7 @@
 							<div class="table-head">
 								<h2 class="title">ECOMMERCE</h2>
 								<div class="price">
-									<p class="amount">$<span>35.000</span> ANUAL</p>
+									<p class="amount">$<span>38.000</span> ANUAL</p>
 								</div>
 								<style>
 									.textooferta { 
@@ -727,7 +727,7 @@
 							<!-- Table List -->
 							<ul class="table-list">
 								<li>Cantidad de paginas 10</li>
-								<li>Catálogo + Venta Online</li>
+								<li>Diseño Personalizado + Catálogo</li>
 								<li>24/7 Soporte Tecnico</li>
 								<li>Cambios dinamicos en Sitio Web</li>
 								<li>Cuenta de correo electrónico ilimitada</li>
