--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 								<li class="active" data-filter="*"><span>06</span><i class="fa fa-tasks"></i>Todo mi trabajo</li>
 								<li data-filter=".development"><span>01</span><i class="fa fa-pencil"></i>Portfolio</li>
 								<li data-filter=".design"><span>05</span><i class="fa fa-paint-brush"></i>Web comercial</li>
-								<li data-filter=".html5"><span>05</span><i class="fa fa-html5"></i>Web Adaptable</li>
+								<li data-filter=".html5"><span>05</span><i class="fa fa-html5"></i>Maquetas</li>
 							</ul>
 						</div>
 						<!--/ End portfolio Nav -->
@@ -450,21 +450,18 @@
 					<div class="row stylex">	
 						<div class="isotop-active">
 							<!-- Single portfolio -->
-							<div class="mix design html5 col-md-4 col-sm-6 col-xs-12 col-fix ">
+							<div class="mix design col-md-4 col-sm-6 col-xs-12 col-fix ">
 								<div class="portfolio-single">
 									<div class="portfolio-head">
 										<img src="images/page1.png" alt="primera pagina web jujuy"/>
 									</div>
 									<div class="portfolio-hover">
-										<h4><span>Web Comercial</span><a href="#">Alberdi</a></h4>
-										<p>Su capital accionario es 100% nacional.
-
-											La producción se realiza con la mas alta tecnología y elevados estándares de calidad, atendiendo a las nuevas tendencias del mercado.
-											
-											Con sus diferentes marcas, Alberdi, Allpa y Paz.</p>
+										<h4><span>Web Comercial</span><a href="#">Palisian alta costura</a></h4>
+										<p>Nos dedicamos a la confeccion de vestidos de novias, 15 años, madrinas, egresadas, candidatas y niñas. Nuestro trabajo se enfoca  principalmente en lograr que cada bella mujer luzca un diseño único que refleje su estilo
+											 y personalidad. Para ello asesoramos y trabajamos con la misma pasión del primer día pero con toda la experiencia adquirida con los años.</p>
 										<div class="button">
 											<a data-fancybox="gallery" href="images/page1.png"><i class="fa fa-search"></i></a>
-											<a href="https://www.alberdi.com.ar/" class="primary"><i class="fa fa-external-link"></i></a>
+											<a href="https://www.palisianaltacostura.com.ar/" class="primary"><i class="fa fa-external-link"></i></a>
 										</div>
 									</div>
 								</div>
@@ -477,11 +474,11 @@
 										<img src="images/page2.png" alt="segunda pagina web jujuy"/>
 									</div>
 									<div class="portfolio-hover">
-										<h4><span>Web Comercial</span><a href="#">Centauro corte y plegado Salta</a></h4>
-										<p>Entrega en término. Valoramos el compromiso asumido con nuestros clientes. 12 años de trayectoria. Dando respuesta en tiempo y forma, a las necesidades de nuestros clientes.</p>
+										<h4><span>Web Comercial</span><a href="#">One Page ejemplo 2</a></h4>
+										<p>Es un sitio web desarrollado en una sola página. Todo el contenido puede ser visto fácil y rápidamente en una sola página que se navega verticalmente.</p>
 										<div class="button">
 											<a data-fancybox="gallery" href="images/page2-1.png"><i class="fa fa-search"></i></a>
-											<a href="https://www.centaurocorteyplegadosalta.com.ar/" class="primary"><i class="fa fa-external-link"></i></a>
+											<a href="https://www.gabrieltercero.com.ar/OnePage/index.html" class="primary"><i class="fa fa-external-link"></i></a>
 										</div> 
 									</div>
 								</div>
@@ -506,17 +503,17 @@
 							</div>
 							<!--/ End portfolio -->
 							<!-- Single portfolio -->
-							<div class="mix design col-md-4 col-sm-6 col-xs-12 col-fix">
+							<div class="mix design html5 col-md-4 col-sm-6 col-xs-12 col-fix">
 								<div class="portfolio-single">
 									<div class="portfolio-head">
 										<img src="images/page4.png" alt="cuarta pagina web jujuy"/>
 									</div>
 									<div class="portfolio-hover">
-										<h4><span>Web Comercial</span><a href="#">Reparación y Mantenimiento PC</a></h4>
-										<p>¿Tienes un problema con tu PC? llamanos y te resolveremos el problema. No pierdas tiempo.</p>
+										<h4><span>Web Comercial</span><a href="#">One Page ejemplo 2</a></h4>
+										<p>Es un sitio web desarrollado en una sola página. Todo el contenido puede ser visto fácil y rápidamente en una sola página que se navega verticalmente.</p>
 										<div class="button">
 											<a data-fancybox="gallery" href="images/page4.png"><i class="fa fa-search"></i></a>
-											<a href="https://reparayprotejetupc.netlify.app/" class="primary"><i class="fa fa-external-link"></i></a>
+											<a href="https://www.gabrieltercero.com.ar/OnePage2/index.html" class="primary"><i class="fa fa-external-link"></i></a>
 										</div>
 									</div>
 								</div>
@@ -541,7 +538,7 @@
 							</div>
 							<!--/ End portfolio -->
 							<!-- Single portfolio -->
-							<div class="mix development html5 col-md-4 col-sm-6 col-xs-12 col-fix">
+							<div class="mix development col-md-4 col-sm-6 col-xs-12 col-fix">
 								<div class="portfolio-single">
 									<div class="portfolio-head">
 										<img src="images/page6.png" alt="sexta pagina web jujuy"/>
@@ -715,7 +712,7 @@
 							<div class="table-head">
 								<h2 class="title">ECOMMERCE</h2>
 								<div class="price">
-									<p class="amount">$<span>40.000</span> ANUAL</p>
+									<p class="amount">$<span>70.000</span> ANUAL</p>
 								</div>
 								<style>
 									.textooferta { 
