--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 										<li class="active"><a href="#personal-area"><i class="fa fa-home"></i>Inicio</a></li>
 										<li><a href="#my-service"><i class="fa fa-rocket"></i>Mi Servicio</a></li>
 										<li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
-										<li><a href="#my-timeline"><i class="fa fa-history"></i>Linea de tiempo</a></li>
+										<li><a href="#my-timeline"><i class="fa fa-history"></i>Metodología</a></li>
 										<li><a href="#testimonials"><i class="fa fa-star"></i>Testimonios</a></li>	
 										<li><a href="#contact"><i class="fa fa-address-book"></i>Contacto</a></li>		
 									</ul>
@@ -474,7 +474,7 @@
 										<img src="images/page2.png" alt="segunda pagina web jujuy"/>
 									</div>
 									<div class="portfolio-hover">
-										<h4><span>Web Comercial</span><a href="#">One Page ejemplo 2</a></h4>
+										<h4><span>Web Comercial</span><a href="#">One Page ejemplo 1</a></h4>
 										<p>Es un sitio web desarrollado en una sola página. Todo el contenido puede ser visto fácil y rápidamente en una sola página que se navega verticalmente.</p>
 										<div class="button">
 											<a data-fancybox="gallery" href="images/page2-1.png"><i class="fa fa-search"></i></a>
