--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
 								<i class="fa fa-phone"></i> 
 								<div class="title">
 									<h4>Mi Celular</h4>
-									<p>+543886569167</p>
+									<p><a href="tel:+5493886569167" style="color:#242424;">3886569167</a></p>
 								</div>
 							</div>
 							<!--/ End Single Address -->
@@ -891,7 +891,7 @@
 								<i class="fa fa-envelope"></i> 
 								<div class="title">
 									<h4>Correo electrónico</h4>
-									<p>gabriel_seba94@hotmail.com</p>
+									<p><a href="mailto:gabriel_seba94@hotmail.com" style="color:#242424;">gabriel_seba94@hotmail.com</a></p>
 								</div>
 							</div>
 							<!--/ End Single Address -->
