--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
 								<li>Cantidad de paginas 10</li>
 								<li>Diseño Personalizado + Catálogo</li>
 								<li>24/7 Soporte Tecnico</li>
-								<li>Cambios dinamicos en Sitio Web</li>
+								<li>Sitio Web Autoadministrable</li>
 								<li>Cuenta de correo electrónico ilimitada</li>
 								<li class="cross">Espacio del disco ilimitado</li>
 							</ul>
