--- a/index.html
+++ b/index.html
@@ -197,14 +197,7 @@
 											<div class="col-md-8 col-sm-12 col-xs-12">
 												<div class="content">
 													<p>Me llamo Gabriel Tercero y soy Tecnico Superior en Desarrollo de Software.</p>
-													<p>Trabajo como Diseñador web freelance con varios años de experiencia, siempre he sido un apasionado de la informática desde muy joven. He estado trabajando con tecnologías de desarrollo hace 5 años, siempre manteniendo al día mis conocimientos con respecto a los cambios que se producen día a día.</p>
-													<p>Estudios <br>
-													- Escuela Prov. de Artes N°3 Lola Mora - Tecn. en Artes Visuales con Orientación en Pintura.<br>
-													- Titulo de Tecnico Superior en Desarrollo de Software.<br>
-													- Titulo de Tecnico Superior en Automatización y Robotica (ultimo año).<br>
-													- Curso de Operador de PC Basico.<br>
-													- Curso de Diseño Grafico.<br>
-													- Curso online de Diseño web Avanzado.<br></p>
+													<p>cuentas con habilidades y conocimientos especializados en el desarrollo de aplicaciones, sistemas informáticos y programación. Tu perfil profesional se caracteriza por tu capacidad para trabajar con diferentes lenguajes de programación, bases de datos y sistemas operativos, así como por tu habilidad para resolver problemas de manera eficiente y adaptarte a entornos tecnológicos en constante evolución. Eres apasionado por la tecnología, te mantienes actualizado en las últimas tendencias del sector y posees una mentalidad analítica y creativa que te permite desarrollar soluciones innovadoras en el ámbito de la informática. Tu formación y experiencia te respaldan como un profesional competente y preparado para enfrentar los desafíos del mundo digital.<br></p>
 													</ul>
 												</div>
 												<div class="social">
