--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
 											<!-- Single Skill -->
 											<div class="single-skill">
 												<div class="skill-info">
-													<h4>Diseño Web</h4>
+													<h4>Paquete Office</h4>
 												</div>
 												<div class="progress">
-												  <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"><span>100%</span></div>
+												  <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"><span>100%</span></div>
 												</div>
 											</div>
 											<!--/ End Single Skill -->
@@ -245,10 +245,10 @@
 											<!-- Single Skill -->
 											<div class="single-skill">
 												<div class="skill-info">
-													<h4>Adobe - Photoshop</h4>
+													<h4>Sistema Operativo</h4>
 												</div>
 												<div class="progress">
-												  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"><span>80%</span></div>
+												  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"><span>80%</span></div>
 												</div>
 											</div>
 											<!--/ End Single Skill -->
@@ -257,10 +257,10 @@
 											<!-- Single Skill -->
 											<div class="single-skill">
 												<div class="skill-info">
-													<h4>Diseño UI/UX</h4>
+													<h4>Trabajo en equipo</h4>
 												</div>
 												<div class="progress">
-												  <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"><span>95%</span></div>
+												  <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"><span>95%</span></div>
 												</div>
 											</div>
 											<!--/ End Single Skill -->
@@ -269,7 +269,7 @@
 											<!-- Single Skill -->
 											<div class="single-skill">
 												<div class="skill-info">
-													<h4>HTML5/CSS3</h4>
+													<h4>Capacidad de resolución de problemas</h4>
 												</div>
 												<div class="progress">
 												  <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"><span>100%</span></div>
@@ -293,10 +293,10 @@
 											<!-- Single Skill -->
 											<div class="single-skill">
 												<div class="skill-info">
-													<h4>Javascript</h4>
+													<h4>Mantenimiento de PC</h4>
 												</div>
 												<div class="progress">
-												  <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%;"><span>65%</span></div>
+												  <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"><span>65%</span></div>
 												</div>
 											</div>
 											<!--/ End Single Skill -->
