--- a/index.html
+++ b/index.html
@@ -339,13 +339,7 @@
 									<div class="about-text">
 										<h2 class="tab-title">Mi Vision</h2>
 										<div class="content">
-											<p>Un diseñador gráfica ha de contar con la creatividad y educación visual necesaria para lograr transmitir ideas, conceptos o sensaciones determinadas en función de lo que el proyecto requiera.
-
-												De esta manera, la visión de un diseñador gráfico se antoja indispensable para la creación de identidades visuales, creaciones de marca y estilos estéticos de empresas y distintos negocios.
-												
-												Gracias a la labor del diseñador gráfico, se puede definir la percepción que posee el gran público sobre una marca o empresa. Prácticamente cualquier proyecto necesita distinguirse de su principal competencia, por lo que requiere una identidad visual que lo diferencie y aporte una imagen clara y concisa de su actividad y principales ventajas con respecto a sus competidores.</p>
-											<p>De esta manera, la visión de un diseñador gráfico ayuda en gran manera a lograr los objetivos marcados en cualquier proyecto. Ayuda a lograr mayor identificación de marca por parte de clientes asiduos y potenciales, y ayuda a segmentar al público objetivo.</p>
-										<p>La visión de un artista busca evocar una sensación o emoción a través de una creación propia, cargada de su esencia y personalidad, fruto de la expresión artística que supone, por ejemplo, la pintura, la visión de un diseñador gráfico busca solucionar de manera funcional y estética la manera de comunicar un mensaje o concepto. En resumidas cuentas, un artista da a luz a una obra de arte, por norma general sin encontrarse sujeta a normas o condiciones, mientras que el diseñador gráfico compone una solución visual a un mensaje que ha de ser transmitido en función de distintos parámetros, tales como el soporte, un contenido definido o una estrategia de marketing, entre otros.</p>
+											<p>se caracteriza por mi pasión y curiosidad por la tecnología, así como por mi constante búsqueda de actualización y aprendizaje en un campo en constante evolución. Tengo la capacidad de anticipar y adaptarme a los cambios tecnológicos, aplicando mis conocimientos de forma creativa e innovadora para resolver problemas y desarrollar soluciones efectivas. Mi visión abarca tanto los aspectos técnicos como las implicaciones sociales y económicas de la tecnología, lo que me permite tomar decisiones informadas y estratégicas en un entorno digital dinámico. Mi compromiso con la excelencia y la mejora continua me impulsa a ser un líder en la innovación y la transformación digital, contribuyendo al avance y desarrollo en el campo de la informática. ¡Mi visión en informática me posiciona como un profesional proactivo y motivado por el crecimiento y la excelencia en el mundo tecnológico!</p>
 										</div>
 									</div>
 								</div>
